--- a/devices/common/.config
+++ b/devices/common/.config
@@ -93,6 +93,8 @@ CONFIG_PACKAGE_kmod-pcie_mhi=n
 
 CONFIG_PACKAGE_kmod-rtl8189es=n
 
+CONFIG_PACKAGE_kmod-aic8800=n
+
 CONFIG_IMAGEOPT=y
 CONFIG_VERSIONOPT=y
 
