--- a/devices/rockchip_armv8/.config
+++ b/devices/rockchip_armv8/.config
@@ -12,5 +12,6 @@ CONFIG_TARGET_KERNEL_PARTSIZE=32
 
 CONFIG_PACKAGE_kmod-pcie_mhi=m
 CONFIG_PACKAGE_kmod-ath12k=n
+CONFIG_PACKAGE_kmod-aic8800=m
 
 
